fixed css to align center in desktop and fit all content in mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,5 +12,6 @@ body{
    justify-content: center;
    margin: auto;
   background:#E7F4FC;
-
+  min-height: 100vh;
+  max-height: fit-content
 }
